--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,115 @@
-.App {
-  text-align: center;
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header{
+    width: 100%;
+    height:10vh;
+    color: limegreen;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@media screen and (min-width:300px){
+    .products-container {
+        width: 100%;
+        min-height: 80vh;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        text-align: start;
+        justify-items: center;
+        padding: 10px;
+    }
+    
+    
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media screen and (min-width:700px){
+    .products-container {
+        width: 100%;
+        min-height: 80vh;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        text-align: start;
+        justify-items: center;
+        padding: 10px;
+    }
+    
+    
 }
 
-.App-link {
-  color: #61dafb;
+@media screen and (min-width:950px){
+    .products-container {
+        width: 100%;
+        min-height: 80vh;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        justify-items: center;
+        padding: 10px;
+    }
+    
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and (min-width:1200px){
+    .products-container {
+        width: 100%;
+        min-height: 80vh;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        justify-items: flex-start;
+        padding: 10px;
+    }
+    
+}
+
+
+
+#price{
+    margin-top: 15px;
+    font-size: 15px;
+    
+}
+
+#title{
+    margin-top: 10px;
+    font-size: 25px;
+}
+
+.img{
+    width: 200px;
+    height: 200px;
+    transition: all 0.3s ease;
+}
+
+.img:hover{
+    transform: scale(1.1);
+}
+
+.card{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 20px 20px;
+}
+
+.card-description {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    margin-top: 10px;
+}
+
+.footer{
+    width: 100%;
+    height: 10vh;
+    background-color: gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-weight: bold;
+    font-size: 20px;
 }
